--- a/.gitignore
+++ b/.gitignore
@@ -9,3 +9,6 @@
 .cxx
 local.properties
 /config.properties
+/app/release/baselineProfiles/0/app-release.dm
+/app/release/baselineProfiles/1/app-release.dm
+/app/release/output-metadata.json
