feat: Add debug build option to workflow
This commit modifies the GitHub workflow to allow for debug builds.

If the `release_type` input is set to 'none', the workflow will now build a debug APK instead of a release APK and AAB.
The upload and release steps are skipped for debug builds.

--- a/.github/workflows/selfwithstage.yml
+++ b/.github/workflows/selfwithstage.yml
@@ -145,11 +145,16 @@ jobs:
         uses: ./.github/actions/android-setup
 
       - name: Build APK
+        if: ${{ inputs.release_type != 'none' }}
         env:
           KEYSTORE_PASSWORD: ${{ secrets.KEYSTORE_PASSWORD }}
           KEY_ALIAS: ${{ secrets.KEY_ALIAS }}
           KEY_PASSWORD: ${{ secrets.KEY_PASSWORD }}
         run: ./gradlew bundleRelease assembleRelease
+
+      - name: Debug Build APK
+        if: ${{ inputs.release_type == 'none' }}
+        run: ./gradlew assembleDebug
 
       - name: Upload APK
         if: ${{ inputs.release_type != 'none' }}
@@ -174,5 +179,4 @@ jobs:
           packageName: ${{ inputs.package_name }}
           releaseFiles: app/build/outputs/bundle/release/app-release.aab
           track: ${{ inputs.release_type }}
-
 
